--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -8,16 +8,19 @@
 <script type="text/javascript" charset="utf-8">
 $(function() {
   $(".js-more").on("click", function() {
+    
     var id = $(this).data("id");
-    $.get("/products/" + id + "/description", function(description) {
-      $.get("/products/" + id + "/inventory", function(inventory) {
-        var inventoryText = "<strong>Available</strong>";
-        if(inventory === "false"){
-          inventoryText = "<strong>Sold Out</strong>";
-        }
-        var descriptionText = "<p>" + description + "</p><p>" + inventoryText + "</p>";
-        $("#product-" + id).html(descriptionText);
-      });
+    $.get("/products/" + id + ".json", function(data) {
+      var inventoryText = "<strong>Available</strong>";
+      if(data["inventory"] == 0){
+        inventoryText = "<strong>Sold Out</strong>";
+      }
+      var orderId = data["orders"].map(a => a.id)
+      var orderCreated = data["orders"].map(a => a.created_at)
+        var text = "<p>" + data["description"] + "</p><p>" + 
+                  inventoryText + "</p>" + "<ul>Orders<li>" + orderId + "<br>" + orderCreated + "</li></ul>";
+        $("#product-" + id).html(text);
+    event.preventDefault()
     });
   });
 });
